--- a/src/main/resources/org/example/librarymanagementsystem/view/hello-view.fxml
+++ b/src/main/resources/org/example/librarymanagementsystem/view/hello-view.fxml
@@ -71,7 +71,7 @@
                   <Font size="30.0" />
                </font>
             </Label>
-            <GridPane fx:id="booksGrid" alignment="CENTER" layoutX="53.0" layoutY="670.0" prefHeight="1426.0" prefWidth="704.0">
+            <GridPane fx:id="booksContainer" alignment="CENTER" layoutX="53.0" layoutY="670.0" prefHeight="1426.0" prefWidth="704.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" maxWidth="181.9285888671875" minWidth="10.0" prefWidth="181.9285888671875" />
@@ -85,7 +85,7 @@
                   <RowConstraints maxHeight="458.429443359375" minHeight="10.0" prefHeight="440.85791015625" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <VBox fx:id="booksContainer" prefHeight="200.0" prefWidth="100.0">
+                  <VBox prefHeight="200.0" prefWidth="100.0">
                      <children>
                         <ImageView fitHeight="188.0" fitWidth="140.0" pickOnBounds="true" preserveRatio="true">
                            <image>
